fix PR comments